--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "test": "vitest"
   },
   "dependencies": {
     "pinia": "^2.0.23",
@@ -16,20 +17,23 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.68",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@types/node": "^18.19.76",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "jsdom": "^26.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.2",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~4.7.4",
-    "vite": "^3.1.8",
+    "vite": "^3.2.4",
+    "vitest": "^3.0.5",
     "vue-tsc": "^1.0.8"
   }
 }
