feat: update tsconfig.json to adjust path resolution and enable JavaScript support

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,9 +4,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "allowJs": true
   },
 
   "references": [
